# strukt-protocol

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROTOCOL.md  README.md  pyproject.toml
strukt/: codec.py  events.py  protocol.py
tests/: test_core.py
